--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-three/fiber": "^8.13.0",
     "framer-motion": "^10.12.16",
     "maath": "^0.6.0",
+    "openai": "^4.0.1",
     "react": "^18.2.0",
     "react-color": "^2.19.3",
     "react-dom": "^18.2.0",
